# ORT-yolo-seg

./: .gitignore  CMakeLists.txt  README.md  build.sh  create_deploy_package.sh
src/: main.cpp  utils.cpp  utils.h  yolo_detector.cpp  yolo_detector.h
tools/: build_opencv.sh  package_with_glibc.sh  toolchain-aarch64.cmake
